--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-ControLeo2 Reflow Oven Controller
-=================================
+ControLeo2 Reflow Oven Controller (DIY Etched Copperclad PCB Edition, WIP)
+==========================================================================
 
 Reflow oven build guide:
 http://www.whizoo.com/reflowoven
