--- a/README
+++ b/README
@@ -7,6 +7,10 @@ http://www.whizoo.com/reflowoven
 Buying ControLeo2:
 http://www.whizoo.com/buy
 
+Building Controleo2: DIY Etched Copperclad Edition
+ReflowWizard software is currently a WIP, but here's what the functioning hardware looks like ![DIY Etched Copperclad Edition Controleo2](https://imgur.com/a/9p7RdRK)
+More details to follow soon...
+
 Updating the firmware running on ControLeo2:
 http://www.whizoo.com/update
 
