--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Buying ControLeo2:
 http://www.whizoo.com/buy
 
 Building Controleo2: DIY Etched Copperclad Edition
-ReflowWizard software is currently a WIP, but here's what the functioning hardware looks like ![DIY Etched Copperclad Edition Controleo2](https://imgur.com/a/9p7RdRK)
+ReflowWizard software is currently a WIP, but here's what the functioning hardware looks like: https://imgur.com/a/9p7RdRK
 More details to follow soon...
 
 Updating the firmware running on ControLeo2:
