--- a/README
+++ b/README
@@ -7,9 +7,11 @@ http://www.whizoo.com/reflowoven
 Buying ControLeo2:
 http://www.whizoo.com/buy
 
-Building Controleo2: DIY Etched Copperclad Edition
-ReflowWizard software is currently a WIP, but here's what the functioning hardware looks like: https://imgur.com/a/9p7RdRK
-More details to follow soon...
+Building Controleo2: DIY Etched Copperclad Edition (supports 3 relays/SSR and 1 servo)--perfect for people on a tight budget.
+ReflowWizard software changes are a WIP, but here's what the finished product looks like (sneak peek): https://imgur.com/a/9p7RdRK
+
+More details, schematics, KiCAD layout, gerbers, etc, to follow soon (next few weeks)...
+3D printed PLA casing is also a WIP.
 
 Updating the firmware running on ControLeo2:
 http://www.whizoo.com/update
@@ -81,7 +83,9 @@ Reflow Wizard
 *        higher than this.         
 *      - Minor tweaks to learning mode, to reduce number of times this needs to
 *        be run.
-
+*
+* modified (WIP) for DIY Toner Transfer Etched Copperclad Build
+* by dudeitssm (https://github.com/dudeitssm)
 
 Oven door servo:
 ================
