--- a/README
+++ b/README
@@ -7,8 +7,7 @@ http://www.whizoo.com/reflowoven
 Buying ControLeo2:
 http://www.whizoo.com/buy
 
-Building Controleo2: DIY Etched Copperclad Edition (supports 3 relays/SSRs and 1 servo) -- perfect for people on a tight budget.
-TLDR build log here: https://moltensolderlabs.com/projects/misc/reflow_oven
+Building Controleo2: DIY Etched Copperclad Edition (supports 3 relays/SSRs and 1 servo) -- perfect for people on a tight budget. More extensive build log here: https://moltensolderlabs.com/projects/misc/reflow_oven
 
 Updating the firmware running on ControLeo2:
 http://www.whizoo.com/update
